Bug 77683 - UI: The color in the toolbar buttons doesn't change when we use the Floating Font/Background/Highlight Color Toolbar.
Summary: UI: The color in the toolbar buttons doesn't change when we use the Floating ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.3.2 release
Hardware: Other All
: medium normal
Assignee: Tomofumi Yagi
URL:
Whiteboard: BSA target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-20 01:50 UTC by Tomofumi Yagi
Modified: 2014-05-24 04:32 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Screenshot 1: Expected behavior(after first mouse click). (59.47 KB, image/png)
2014-04-20 02:08 UTC, Tomofumi Yagi
Details
Screenshot 2: Unxpected behavior(after second mouse click). (54.61 KB, image/png)
2014-04-20 02:21 UTC, Tomofumi Yagi
Details
fix for fdo#77683 (2.04 KB, patch)
2014-04-20 03:10 UTC, Tomofumi Yagi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tomofumi Yagi 2014-04-20 01:50:46 UTC
Problem description: 
The color in the toolbar buttons doesn't change when we use the Floating Font/Background/Highlight Color Toolbar.

Steps to reproduce:
1. Start Writer.
2. Click the Font Color Toolbar,then make a Toolbar a Floating Toolbar(Click the handle at the start of the toolbar, and drag the toolbar into the document).
3. Click the color on the Floating Color toolbar. 
 -> The color in the Font Color toolbar button will change.
4. Click the (other) color on the Floating Color toolbar,again.
 -> The color in the Font Color toolbar button will not change.

Current behavior:
The color in the Font Color toolbar button doesn't change sometimes.

Expected behavior:
The color in the Font Color toolbar button change always.


This problem will appear in the Background/Highlight Color Toolbar, too.

Operating System: All
Version: 4.1.3.2 release
Comment 1 Tomofumi Yagi 2014-04-20 02:08:39 UTC
Created attachment 97627 [details]
Screenshot 1: Expected behavior(after first mouse click).
Comment 2 Tomofumi Yagi 2014-04-20 02:21:37 UTC
Created attachment 97628 [details]
Screenshot 2: Unxpected behavior(after second mouse click).
Comment 3 Tomofumi Yagi 2014-04-20 03:10:34 UTC
Created attachment 97630 [details]
fix for fdo#77683
Comment 4 Kohei Yoshida 2014-04-25 14:35:51 UTC
I can't reproduce this.  Note that I've tested it after applying your patch for Bug 73891, using the master build on Linux.
Comment 5 Kohei Yoshida 2014-04-25 14:46:03 UTC
Ah I got it.  I have to 

1. Detach the color panel into a floating window and set a color there.  The color in the icon updates properly.
2. Go back to the toolbar popup color panel and set a color there.  The color in the icon updates properly.
3. Go back to the floating color panel and set a different color there.  The color in the icon no longer updates.
Comment 6 Commit Notification 2014-04-25 14:51:36 UTC
Tomofumi Yagi committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f5dc536eae7dc28e09112ab9dd69e55fae015ee8

fdo#77683 the color in the toolbar buttons doesn't change.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Kohei Yoshida 2014-04-25 14:59:07 UTC
I tried to backport this to 4.2 but unfortunately the backport isn't trivial.  Since this is a tiny corner case let's mark this fixed for 4.3 and close the case.
Comment 8 Tomofumi Yagi 2014-04-26 08:52:05 UTC
(In reply to comment #7)
> I tried to backport this to 4.2 but unfortunately the backport isn't
> trivial.  Since this is a tiny corner case let's mark this fixed for 4.3 and
> close the case.

Kohei san, I think so,too.
Thank you for the review and the commit.
Comment 9 Kohei Yoshida 2014-04-26 14:33:29 UTC
Mark it fixed for real.
Comment 10 Commit Notification 2014-05-14 09:43:58 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b07377b3effd8b64054f923be99cde65e663f025

Revert "fdo#77683 the color in the toolbar buttons doesn't change."



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Adolfo Jayme Barrientos 2014-05-24 04:32:20 UTC
After the revert notification was posted, this follow-up patch was committed: http://cgit.freedesktop.org/libreoffice/core/commit/?id=584b415924bba22db23a4258062e54973de0ed7c

Just a FYI for this thread. :-)