fdo#77683 the color in the toolbar buttons doesn't change.

The color in the toolbar buttons doesn't change when we use the Floating
Font/Background/Highlight Color Toolbar.
This problem seems happen sometimes,not always.

This patch modifies that SvxColorExtToolBoxControl::StateChanged()
in /svx/source/tbxctrls/tbcontrol.cxx handles SFX_ITEM_DEFAULT message
always.

Change-Id: If7410297db768c161287b75396186fbec3605f63