include/svx/tbcontrl.hxx
@@ -269,7 +269,6 @@ class SVX_DLLPUBLIC SvxColorExtToolBoxControl : public SfxToolBoxControl
 
     ::svx::ToolboxButtonColorUpdater*   pBtnUpdater;
     Color                               mLastColor;
-    bool                                bChoiceFromPalette;
 
 public:
     SFX_DECL_TOOLBOX_CONTROL();
